Fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 }
 
 /* Typography */
+
 ::selection {
   background: var(--color-primary);
   color: #fff;
@@ -25,11 +26,15 @@ html {
   font-size: 62.5%;
 }
 
+img {
+  width: 100%;
+}
+
 body {
-  color: var(--color-body);
   font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.5;
+  color: var(--color-body);
 }
 
 h1,
@@ -41,7 +46,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -49,8 +54,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
-  font-weight: 500;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -58,6 +64,10 @@ p {
 }
 
 @media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+
   h1 {
     font-size: 8rem;
   }
@@ -67,7 +77,7 @@ p {
   }
 
   h3 {
-    font-size: 2.4;
+    font-size: 2.4rem;
   }
 }
 
@@ -103,7 +113,7 @@ a {
 .badge {
   border-radius: 20px;
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: 600;
   padding: 0.5rem 2rem;
   white-space: nowrap;
 }
@@ -168,8 +178,8 @@ a {
 }
 
 .icon--small {
-  width: 32px;
-  height: 32px;
+  width: 30px;
+  height: 30px;
 }
 
 .icon--primary {
@@ -203,7 +213,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -231,7 +241,7 @@ a {
 }
 
 .btn--secondary:hover {
-  background: #00c8eb;
+  background: #05cdf0;
 }
 
 .btn--accent {
@@ -281,7 +291,7 @@ a {
 }
 
 .input::placeholder {
-  color: #cdcdb7;
+  color: #cdcbd7;
 }
 
 @media screen and (min-width: 1024px) {
@@ -292,7 +302,7 @@ a {
 
 /* Input groups */
 .input-group {
-  border: 1px solid var(--color-body);
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   display: flex;
 }
@@ -301,6 +311,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -324,7 +335,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 2rem 3rem;
+  padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -358,11 +369,11 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 300;
   margin-right: 1rem;
   opacity: 0.8;
@@ -377,10 +388,6 @@ a {
 
 .plan .list__item {
   margin-bottom: 2rem;
-}
-
-.plan--popular {
-  transform: scale(1.1);
 }
 
 .plan--popular .card__header {
@@ -404,6 +411,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -424,11 +435,11 @@ a {
 /* Media */
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__image {
   margin-top: 1rem;
-  margin-bottom: 4rem;
 }
 
 .media__body {
@@ -456,7 +467,7 @@ a {
 }
 
 .quote__author {
-  font-size: 3rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 500;
   margin-bottom: 0;
@@ -464,7 +475,7 @@ a {
 
 .quote__organization {
   color: var(--color-headings);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-style: normal;
   opacity: 0.4;
 }
@@ -497,10 +508,6 @@ a {
   .grid--1x2 {
     grid-template-columns: repeat(2, 1fr);
   }
-
-  .grid--1x4 {
-    grid-template-columns: repeat(4, 1fr);
-  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -525,8 +532,9 @@ a {
   top: 3rem;
 }
 
-.testimonial__image {
-  width: 100%;
+.testimonial .quote {
+  margin: 2rem 0;
+  font-size: 110%;
 }
 
 @media screen and (min-width: 768px) {
@@ -534,14 +542,10 @@ a {
     margin: 0;
   }
 
-  .testimonial .quote,
-  .testimonial .quote__author {
-    font-size: 2.4rem;
-  }
-
   .testimonial .quote {
-    margin-left: 6rem;
-    margin-right: 0;
+    margin: 5rem 0 0 6rem;
+    font-size: 120%;
+    line-height: 1.5;
   }
 }
 
@@ -571,6 +575,10 @@ a {
   text-align: center;
 }
 
+.callout-signup {
+  transform: translateY(5rem);
+}
+
 @media screen and (min-width: 768px) {
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
@@ -597,7 +605,7 @@ a {
   margin-top: 0;
 }
 
-.collapsible__chevron {
+.collapsible__toggler {
   transform: rotate(-90deg);
   transition: transform 0.3s;
 }
@@ -609,19 +617,19 @@ a {
   transition: all 0.3s;
 }
 
-.collapsible--expanded .collapsible__chevron {
+.collapsible--expanded .collapsible__toggler {
   transform: rotate(0);
 }
 
 .collapsible--expanded .collapsible__content {
-  max-height: 100vh;
+  max-height: 100%;
   opacity: 1;
 }
 
 /* Blocks */
 .block {
-  --vertical-padding: 6rem;
-  padding: var(--vertical-padding) 2rem;
+  --padding-vertical: 5rem;
+  padding: var(--padding-vertical) 2rem;
 }
 
 .block__header {
@@ -635,7 +643,7 @@ a {
 
 .block--dark {
   background: #000;
-  color: #fff;
+  color: #7b858b;
 }
 
 .block--dark h1,
@@ -645,13 +653,13 @@ a {
 }
 
 .block--skewed-right {
-  clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 90%);
-  padding-bottom: calc(var(--vertical-padding) + 4rem);
+  clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 95%);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-  clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%);
-  padding-bottom: calc(var(--vertical-padding) + 4rem);
+  clip-path: polygon(0 0, 100% 0%, 100% 95%, 0 100%);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .container {
@@ -666,7 +674,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .nav__list {
@@ -677,6 +685,10 @@ a {
 .nav__item {
   border-bottom: 2px solid #222;
   padding: 0.5rem 2rem;
+}
+
+.nav__item:last-of-type {
+  border-bottom: none;
 }
 
 .nav__item > a {
@@ -702,6 +714,7 @@ a {
 
 .nav__brand {
   transform: translateY(5px);
+  width: 150px;
 }
 
 @media screen and (min-width: 768px) {
@@ -730,18 +743,16 @@ a {
   margin: 2rem 0 5rem;
 }
 
-.hero__img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-  .hero {
-    padding-top: 0;
-  }
-
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    padding-top: 0;
   }
 }
 
@@ -754,10 +765,11 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   font-size: 2rem;
   font-weight: 600;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   justify-items: center;
   margin: 0 auto;
@@ -794,10 +806,6 @@ a {
   margin: 1rem 0;
 }
 
-.feature__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
@@ -805,10 +813,6 @@ a {
 }
 
 /* Showcase Blocks */
-.block-showcase__image > img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .block-showcase .grid {
     grid-template-columns: 50% 50%;
@@ -837,7 +841,6 @@ a {
 
 .footer__brand img {
   max-width: 230px;
-  width: 100%;
 }
 
 .footer__section {
@@ -850,7 +853,9 @@ a {
 }
 
 .footer__heading {
+  font-size: 2.5rem;
   font-weight: 600;
+  line-height: 1.5;
   text-transform: uppercase;
 }
 
@@ -870,6 +875,10 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+  }
+
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
@@ -882,7 +891,7 @@ a {
     font-size: 1.6rem;
   }
 
-  .footer .collapsible__chevron {
+  .footer .collapsible__toggler {
     display: none;
   }
 
